[project]
name = "ilo"
version = "0.1.0"
description = ""
authors = []
dependencies = [
    "py-cord[speed]>=2.3.0",
    "Pillow>=9.3.0",
    "python-dotenv>=0.21.0",
    "jsonschema-gentypes>=2.4.0",
    # a 3.13 migration issue. required by pycord but not given in requirements.
    # used to be a standard library but removed in 3.13, i think?
    "audioop-lts>=0.2.1",
]
requires-python = ">=3.13"
license = { text = "GPL-3.0" }

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "F722", "E402"]
# E402 conflicts with isort

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
# a 3.13 migration issue.
# remove once other dependencies stop pinning msgspec~=0.18.6
[tool.pdm.resolution.overrides]
msgspec = ">=0.19.0"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.0",
    "black>=22.10.0",
    "pre-commit>=2.20.0",
    "isort>=5.10.1",
    "flake9>=3.8.3.post2",
]

[tool.pyright]
include = ["public"]
exclude = ["**/__pycache__", "__pypackages__", ".venv"]
venvPath = "."
venv = ".venv"
executionEnvironments = [{ root = "." }]
